authentik-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authentik-ingress
  namespace: authentication
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    # nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    cert-manager.io/cluster-issuer: "selfsign-clusterissuer"
spec:
  ingressClassName: nginx
  rules:
  - host: auth.jesber.duckdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: authentik-server
            port:
              name: http
  tls:
  - hosts:
    - auth.jesber.duckdns.org
    secretName: authentik-server-tls # as expected by argocd-server
